odoo-k8s-manifests/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: markstudio-odoo
  labels:
    app.kubernetes.io/part-of: markstudio-odoo
    tenant: markstudio
